--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bower": "^1.8.2",
     "express": "^4.15.2",
     "express-logger": "0.0.3",
     "express-socket.io": "^1.0.3",
